banner section done

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <title>Mother's Blessing Travel</title>
 </head>
 
-<body class="font-inter">
+<body class="font-inter bg-[#F7F8F8] lg:">
     <!-- nav section -->
     <section>
-         <nav class="px-8 lg:mx-32">
-            <div class="navbar bg-base-100">
+        <nav class="px-8 lg:mx-32">
+            <div class="navbar ">
                 <div class="navbar-start">
                   <div class="dropdown">
                     <div tabindex="0" role="button" class=" btn btn-ghost lg:hidden">
@@ -44,7 +44,6 @@
                   </ul>
                 </div>
                 <div class="navbar-end">
-                 
                   <button class="btn btn-sm  lg:h-11 lg:w-24  text-green-500 bg-green-100"><img src="images/bus-icon.png" alt="">Bus</button>
                 </div>
               </div>
@@ -52,9 +51,37 @@
     </section>
     <!-- navbar end -->
 
-    <section>
-
+    <!-- header section start -->
+    <!-- banner section -->
+    <section class=" mt-2 lg:mt-5 mx-5 lg:mx-40">
+        <div >
+            <div class="hero lg:h-[450px] rounded-2xl" style="background-image: url(images/banner.png);">
+                <div class=" "></div>
+                <div class="hero-content text-center text-neutral-content">
+                  <div class="max-w-[800px]">
+                    <h1 class="mb-1 lg:mb-5 text-2xl lg:text-5xl font-extrabold">End-to-End Travel with <br><span class="text-green-500">P Paribahan</span></h1>
+                    <p class="mb-5 lg:mb-5 mx-5 lg:mx-32 font-normal">Experience seamless end-to-end travel with P Paribahan. From booking tickets to reaching your destination, we ensure comfort and convenience throughout.</p>
+                    <button class="btn btn-sm  lg:h-11 lg:w-24  bg-green-500 text-black">Buy Tickets</button>
+                  </div>
+                </div>
+            </div>
+        </div>
+            <!-- <div class="join flex justify-center join-horizontal gap-2 lg:gap-10 mx-10 lg:mx-32">
+                <button class="btn lg:w-52 lg:h-20 join-item"><img src="images/people.png" alt=""><br>
+                <span class="">
+                    <h5>500K+</h5>
+                    <h5 class="ml-14">Registered users</h5>
+                </span>
+                </button>
+                <button class="btn lg:w-52 lg:h-20 join-item">Button</button>
+                <button class="btn lg:w-52 lg:h-20 join-item">Button</button>
+            </div> -->
     </section>
+    <!-- banner section end -->
+    <!-- offer for you section  -->
+    <div>
+        <h3>Best offers for you</h3>
+    </div>
 
     <script src="index.js"></script>
 </body>
