--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                    <a  class="btn btn-sm border-none lg:h-11 lg:w-24  bg-[#1DD100] text-black" href="#ticket-section">Buy Tickets</a>
 
                     <div class=" mt-[90px] lg:flex justify-evenly">
-                        <button class="btn btn h-20 shadow-[#1DD100] shadow-md">
+                        <button class="btn btn h-20 w-56 shadow-[#1DD100] shadow-md">
                             <div class="flex gap-2">
                                 <img class="p-2" src="images/people.png" alt="">
                                 <div class="py-5">
@@ -72,7 +72,7 @@
                                  </div>
                              </div>
                         </button>
-                        <button class="btn btn h-20 shadow-[#1DD100] shadow-md">
+                        <button class="btn btn h-20 mb-4 w-56 shadow-[#1DD100] shadow-md">
                             <div class="flex gap-2">
                                 <img class="p-2" src="images/ticket-cupon.png" alt="">
                                 <div class="py-5">
@@ -81,7 +81,7 @@
                                  </div>
                              </div>
                         </button>
-                        <button class="btn btn h-20 shadow-[#1DD100] shadow-md">
+                        <button class="btn btn w-56 h-20 shadow-[#1DD100] shadow-md">
                             <div class="flex gap-2">
                             <img class="p-2" src="images/stoppage.png" alt="">
                             <div class="py-5 ">
@@ -95,13 +95,6 @@
             </div>
         </div>
     </div>
-    <!-- <div class="flex gap-2">
-        <img src="images/people.png" alt="">
-        <div>
-            <h3 class="text-[20px] font-bold">500K+</h3>
-            <p>Registered users</p>
-         </div>
-     </div> -->
     </section>
     <!-- banner section end -->
 
@@ -159,7 +152,7 @@
                 <div class="mx-5 rounded-2xl">
                     <!-- Content on the left side -->
                     <div class="flex justify-between items-center mb-5">
-                        <div>
+                        <div class="hidden sm:block lg:block">
                             <i class="fa-solid fa-van-shuttle lg:text-4xl "></i>
                         </div>
                         <div>
@@ -189,7 +182,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="lg:flex items-center lg:pr-20">
+                <!-- fare section -->
+                <div class=" lg:flex items-center lg:pr-20">
                     <img class="lg:h-[300px] -mt-7" src="images/info-devider.png" alt="">
                     <div class="text-center">
                         <img class="mx-auto" src="images/fare.png" alt="">
@@ -412,7 +406,7 @@
                                 </label>
                             </div>
                 <div class="my-3">
-                        <button id="submit-button" class="btn-wide hidden h-12 rounded-lg bg-[#1DD100] text-white lg:w-[400px] font-semibold" onclick="my_modal_1.showModal()">Next
+                        <button id="submit-button" class="btn-wide h-12 rounded-lg bg-[#1DD100] text-white lg:w-[400px] font-semibold" onclick="my_modal_1.showModal()">Next
                         </button>
                             <dialog id="my_modal_1" class="modal">
                               <div class="modal-box">
