--- a/index.html
+++ b/index.html
@@ -409,7 +409,10 @@
                         <button id="submit-button" class="btn-wide h-12 rounded-lg bg-[#1DD100] text-white lg:w-[400px] font-semibold" onclick="my_modal_1.showModal()">Next
                         </button>
                             <dialog id="my_modal_1" class="modal">
-                              <div class="modal-box">
+                                <div class="modal-box">
+                                    <div class="flex justify-center h-24">
+                                        <img src="images/success.png" alt="">
+                                    </div>
                                 <h3 class="font-bold pt-5 text-lg text-center text-[#1DD100]">SUCCESS</h3>
                                 <p class="pt-5 px-7 font-medium">Thank you for Booking Our Bus Seats. We are working hard to find the best service and deals for you. Shortly you will find a confirmation in your email.</p>
                               <div class="modal-action mr-36 ">
